# dc2-rebuilt

./: .gitignore  CMakeLists.txt
include/: article.h  category_classifier.h  engine.h  html_parser.h  http_manager.h  http_server.h  lang_detector.h  news_detector.h  nlp_utils.h  stopword_filter.h  thread_manager.h  utils.h
scripts/: eval_lang_detection.py  make_datasets.py
src/: tgnews.cpp
