cmake_minimum_required(VERSION 2.8.9)
project(dc2-rebuilt)
include_directories(include)
include_directories("thirdparty/nlohmann_json/single_include/")
include_directories("thirdparty/cpp-httplib/")
file(GLOB SOURCES "src/*.cpp")
link_libraries(stdc++fs)
add_executable(tgnews ${SOURCES})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -lstdc++fs -pthread -fopenmp")
set(JSON_BuildTests OFF CACHE INTERNAL "")
add_subdirectory("thirdparty/nlohmann_json")
add_subdirectory("thirdparty/cpp-httplib")